@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix multipart holes not animating properly.
+ server/time.c: use convenient animate_object function.
+Nicolas Weeger 2008-01-05
+
 Handle invalid file descriptors more gracefully.
  socket/init.c: reset a file descriptor when closing it.
  socket/loop.c: try to look up bad file descriptors and drop them.
